<resources>
    <string name="app_name">Indicador Dinateste</string>
    <string name="indicador_activity_label">Indicador</string>
    <string name="conexoes_activity_label">Conexões</string>
    <string name="procurar_dispositivos_toolbar_button">Procurar</string>
    <string name="procura_em_andamento">Procura de dispositivos em andamento</string>
    <string name="dispositivo_sem_nome">Dispositivo sem nome</string>
    <string name="limpar_dispositivos_toolbar_button">Limpar</string>
    <string name="conectar">Conectar</string>
    <string name="item_conectado">Conectado</string>
    <string name="desconectar">Desconectar</string>
    <string name="aquisicao_automatica">Aquisição Automática</string>
    <string name="equipamento_activity_label">Equipamento</string>
    <string name="calibracao_activity_label">Calibração</string>
    <string name="nova_calibracao_activity_label">Nova Calibração</string>
    <string name="editar_calibracao_activity_label">Editar Calibração</string>
    <string name="nomeCalibracaoHint">Nome da Calibração</string>
    <string name="grandeza">Grandeza</string>
    <string name="unidadeDeCalibracao">Unidade de Calibração</string>
    <string name="forca">Força</string>
    <string name="tensao">Tensão</string>
    <string name="temperatura">Temperatura</string>
    <string name="kgf">kgf</string>
    <string name="gf">gf</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="nomeCalibracaoVazioError">Nome da calibração não pode estar vazio.</string>
    <string name="nomeEquipamentoVazioError">Nome do equipamento não pode estar vazio.</string>
    <string name="nomeCorpoProvaVazioError">Nome do corpo de prova não pode estar vazio.</string>
    <string name="mpa">MPa</string>
    <string name="gpa">GPa</string>
    <string name="celsius">°C</string>
    <string name="calibracaoComMesmoNome">Já existe uma calibração com esse nome.</string>
    <string name="equipamentoComMesmoNome">Já existe um equipamento com esse nome.</string>
    <string name="corpoProvaComMesmoNome">Já existe um corpo de prova com esse nome.</string>
    <string name="selecionar">Selecionar</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="confirmacaoExlcuirCalibracao">Tem certeza que deseja excluir esta calibração?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="pontosDeCalibracao">Pontos de Calibração</string>
    <string name="naoExistemConexoes">Ainda não existem conexões disponíveis\nClique no botão "Pesquisar"</string>
    <string name="naoExistemCalibracoes">Ainda não existem calibrações salvas</string>
    <string name="naoExistemPontosCalibracao">Ainda não foram adicionados pontos nesta calibração</string>
    <string name="numeroHash">#</string>
    <string name="calibracao">Calibração</string>
    <string name="digital">Digital</string>
    <string name="adicionarPonto">Adicionar Ponto</string>
    <string name="valorDigitalEmbranco">Valor Digital não pode ser vazio.</string>
    <string name="valorCalibracaoEmbranco">Valor da Calibração não pode ser vazio.</string>
    <string name="tf">tf</string>
    <string name="farenheit">ºF</string>
    <string name="semIndicacao">Sem indicação</string>
    <string name="zero">Zero</string>
    <string name="conversaoGrandezasIncompativeis">Conversão entre grandezas incompatíveis</string>
    <string name="velocidade">Velocidade</string>
    <string name="pico">Pico</string>
    <string name="limpar">Limpar</string>
    <string name="calibracaoSemPontos">Ao menos dois pontos de calibração são necessários.</string>
    <string name="ok">OK</string>
    <string name="naoExistemEquipamentos">Ainda não existem equipamentos salvos.</string>
    <string name="naoExistemCorposProva">Ainda não existem corpos de prova salvos.</string>
    <string name="naoExistemItens">Ainda não existem itens salvos.</string>
    <string name="nomeEquipamentoHint">Nome do Equipamento</string>
    <string name="capacidade">Capacidade</string>
    <string name="capacidadeHint">ex.: 1000</string>
    <string name="novo_equipamento_activity_label">Novo Equipamento</string>
    <string name="editar_equipamento_activity_label">Editar Equipamento</string>
    <string name="capacidadeNaoEhNumero">Capacidade precisa ser um número decimal.</string>
    <string name="capacidadeNaoPositivo">Capacidade precisa ser maior que zero.</string>
    <string name="avisoDeSobrecarga">Aviso de Sobrecarga</string>
    <string name="habilitarAviso">Habilitar Aviso de Sobrecarga</string>
    <string name="normalmenteLigado">Normalmente Ligado</string>
    <string name="normalmenteDesligado">Normalmente Desligado</string>
    <string name="sobrecarga">Sobrecarga</string>
    <string name="conectando">Conectando...</string>
    <string name="corpo_prova_activity_label">Corpo de Prova</string>
    <string name="novo_corpo_prova_activity_label">Novo Corpo de Prova</string>
    <string name="editar_corpo_prova_activity_label">Editar Corpo de Prova</string>
    <string name="nomeCorpoProvaHint">Nome do Corpo de Prova</string>
    <string name="novo_item_activity_label">Novo Item</string>
    <string name="editar_item_activity_label">Editar Item</string>
</resources>
