<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/salvarEquipamentoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_save_24dp"
        android:theme="@style/FloatingActionButton"
        android:onClick="onSalvarEquipamentoButtonClick"/>

    <ScrollView
        android:id="@+id/scrollViewPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nomeEquipamentoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomeEquipamentoHint"
                android:inputType="textPersonName"
                android:theme="@style/BigText"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>

            <GridLayout
                android:id="@+id/gridLayoutCalibracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_below="@id/nomeEquipamentoText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/grandeza"
                    android:theme="@style/TextSpinnerLabel" />

                <Spinner
                    android:id="@+id/grandezaSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal|center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/capacidade"
                    android:theme="@style/TextSpinnerLabel" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/capacidadeText"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/capacidadeHint"
                        android:inputType="numberDecimal"
                        android:gravity="center"
                        android:theme="@style/TextSpinnerLabel"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"/>

                    <Spinner
                        android:id="@+id/unidadeEquipamentoSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal|center_vertical" />

                </LinearLayout>

            </GridLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>