<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonSalvar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layoutTopoCalibracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/nomeCalibracaoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomeCalibracaoHint"
                    android:inputType="textPersonName"
                    android:theme="@style/BigText"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"/>

                <GridLayout
                    android:id="@+id/gridLayoutCalibracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:layout_below="@id/nomeCalibracaoText">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/grandeza"
                        android:theme="@style/TextSpinnerLabel" />

                    <Spinner
                        android:id="@+id/grandezaSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal|center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/unidadeDeCalibracao"
                        android:theme="@style/TextSpinnerLabel" />

                    <Spinner
                        android:id="@+id/unidadeCalibracaoSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal|center_vertical" />

                </GridLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutPontosCalibracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_below="@id/layoutTopoCalibracao">

                <TextView
                    android:id="@+id/pontosDeCalibracaoSeparador"
                    style="@style/Separador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pontosDeCalibracao" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pontosDeCalibracaoSeparador"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    >

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_toLeftOf="@id/layoutPontosBotoes">

                    </ListView>

                    <LinearLayout
                        android:id="@+id/layoutPontosBotoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentRight="true">

                        <ImageButton
                            style="@style/SmallButton"
                            android:layout_margin="4dp"
                            android:src="@drawable/ic_add_24dp" />

                        <ImageButton
                            style="@style/SmallButton"
                            android:layout_margin="4dp"
                            android:src="@drawable/ic_remove_24dp" />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        style="@style/Button"
        android:id="@+id/buttonSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:text="@string/salvar"
        android:onClick="onSalvarCalibracaoButtonClick"/>

</RelativeLayout>