<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutDetalhesEnsaio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumBlackText"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:layout_margin="2dp"
                android:text="@string/velocidade"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumBlackText"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_margin="2dp"
                android:text="@string/pico"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/velocidadeEnsaioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumBlackText"
                android:textStyle="bold"
                android:layout_margin="2dp"
                tools:text="0,000 kgf/s"/>

            <TextView
                android:id="@+id/picoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumBlackText"
                android:textStyle="bold"
                android:layout_margin="2dp"
                tools:text="0,0000 kgf"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/layoutIndicacaoPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/indicacao_principal_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="indicacaoPrincipalOnClick"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:theme="@style/HugeBlackText"
                tools:text="1300000" />
            <Spinner
                android:id="@+id/unidadeExibicaoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                style="@style/BigTextBlack">
            </Spinner>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            style="@style/Button"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:onClick="zeroButtonOnClick"/>

    </LinearLayout>

</RelativeLayout>
